--- a/style.css
+++ b/style.css
@@ -8,91 +8,111 @@ body {
   background-color: #121314;
 }
 
-.container {
+.card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   padding-top: 60px;
 }
-.card {
+
+.card__content {
   position: relative;
+
   width: 449px;
+
   background-color: #171b21;
 }
-.card__pullshark {
-  position: relative;
+
+.card__content__pullshark {
   background-image: url("https://github.com/images/modules/profile/achievements/gradients/pull-shark-detail.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  padding: 16px;
-  border-radius: 6px 6px 0px 0px;
 }
-.card__yolo {
-  position: relative;
+
+.card__content__yolo {
   background-image: url("https://github.com/images/modules/profile/achievements/gradients/yolo-detail.png");
+}
+
+.card--content--header {
+  position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+
   width: 100%;
   padding: 16px;
+
   border-radius: 6px 6px 0px 0px;
 }
-.card__pullshark__img {
-  width: 140px;
-  height: 140px;
-}
-.card__pullshark__img__container {
+
+.card__content__img__container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.card__pullshark__button {
+
+.card__content__img {
+  width: 140px;
+  height: 140px;
+}
+
+.card__content__button {
   position: absolute;
   top: 8px;
   right: 7px;
-  background-color: #6e7681;
-  border: 0;
-  border-radius: 8px;
+
   width: 32px;
   height: 32px;
   padding: 4px;
+
+  background-color: #6e7681;
+
+  border: 0;
+  border-radius: 8px;
 }
 
-.card__content {
+.card__body {
   padding: 16px;
 }
-.card__content__heading {
-  color: #c9d1d9;
-  margin-bottom: 9px;
-  margin-top: 4px;
-}
-.card__content__paragraph {
-  color: #c9d1d9;
-  margin-top: 0;
-}
-.card__content__header {
+
+.card__body__header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.card__content__history {
+
+.card__body__heading {
+  margin-bottom: 9px;
+  margin-top: 4px;
+
+  color: #c9d1d9;
+}
+
+.card__body__paragraph {
+  margin-top: 0;
+
+  color: #c9d1d9;
+}
+
+.card__body__history {
   border-top: 1px solid #30363d;
+
   color: #8b949e;
   font-size: 12px;
 }
-.card__content__trophy {
+
+.card__body__history__trophy {
   display: flex;
   gap: 0.8rem;
 }
-.card__content__repo {
+
+.card__body__history__repo {
   display: flex;
+  gap: 0.8rem;
   padding-top: 8px;
-  gap: 0.8rem;
 }
-.card__content__repo span {
+
+.card__body__history__repo span {
   color: #58a6ff;
 }
