--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@ body {
   background-color: #171b21;
 }
 
-.card__content__pullshark {
+.card__pullshark {
   background-image: url("https://github.com/images/modules/profile/achievements/gradients/pull-shark-detail.png");
 }
 
-.card__content__yolo {
+.card__yolo {
   background-image: url("https://github.com/images/modules/profile/achievements/gradients/yolo-detail.png");
 }
 
-.card--content--header {
+.card--header {
   position: relative;
   background-position: center;
   background-size: cover;
@@ -40,18 +40,18 @@ body {
   border-radius: 6px 6px 0px 0px;
 }
 
-.card__content__img-container {
+.card__img-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card__content__img {
+.card__img {
   width: 140px;
   height: 140px;
 }
 
-.card__content__button {
+.card__button {
   position: absolute;
   top: 8px;
   right: 7px;
@@ -67,47 +67,47 @@ body {
   padding: 16px;
 }
 
-.card__body__header {
+.card__header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-.card__body__heading {
+.card__heading {
   margin-bottom: 9px;
   margin-top: 4px;
   color: #c9d1d9;
 }
 
-.card__body__paragraph {
+.card__paragraph {
   margin-top: 0;
   color: #c9d1d9;
 }
 
-.card__body__history {
+.card__history {
   border-top: 1px solid #30363d;
   color: #8b949e;
   font-size: 12px;
 }
 
-.card__body__history__trophy {
+.card__trophy {
   display: flex;
   gap: 0.8rem;
 }
 
-.card__body__history__trophy span {
+.card__trophy span {
   color: #3fb950;
   font-weight: 600;
 }
 
-.card__body__history__repo {
+.card__repo {
   display: flex;
   gap: 0.8rem;
   padding-top: 8px;
 }
 
-.card__body__history__repo span {
+.card__repo span {
   color: #58a6ff;
 }
 
